// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pure function returns the same output for the same input 1`] = `
<main
  class="SignIn-main-1"
>
  <div
    class="MuiPaper-root-6 MuiPaper-elevation2-10 MuiPaper-rounded-7 SignIn-paper-2"
  >
    <div
      class="MuiAvatar-root-33 MuiAvatar-colorDefault-34 SignIn-avatar-3"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root-36"
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <g
          fill="none"
        >
          <path
            d="M0 0h24v24H0V0z"
          />
          <path
            d="M0 0h24v24H0V0z"
            opacity=".87"
          />
        </g>
        <path
          d="M18 8h-1V6c0-2.76-2.24-5-5-5S7 3.24 7 6v2H6c-1.1 0-2 .9-2 2v10c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V10c0-1.1-.9-2-2-2zM9 6c0-1.66 1.34-3 3-3s3 1.34 3 3v2H9V6zm9 14H6V10h12v10zm-6-3c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2z"
        />
      </svg>
    </div>
    <h1
      class="MuiTypography-root-45 MuiTypography-h4-60"
    >
      Skill Matrix
    </h1>
    <form
      class="SignIn-form-4"
    >
      <div
        class="MuiFormControl-root-80 MuiFormControl-marginNormal-81 MuiFormControl-fullWidth-83"
      >
        <label
          class="MuiFormLabel-root-91 MuiFormLabel-required-96 MuiInputLabel-root-84 MuiInputLabel-formControl-85 MuiInputLabel-animated-88"
          data-shrink="false"
          for="email"
        >
          Email Address
          <span
            class="MuiFormLabel-asterisk-97"
          >
             *
          </span>
        </label>
        <div
          class="MuiInputBase-root-111 MuiInput-root-98 MuiInput-underline-102 MuiInputBase-formControl-112 MuiInput-formControl-99"
        >
          <input
            aria-invalid="false"
            autocomplete="email"
            autofocus=""
            class="MuiInputBase-input-121 MuiInput-input-106"
            id="email"
            name="email"
            required=""
            type="text"
          />
        </div>
      </div>
      <div
        class="MuiFormControl-root-80 MuiFormControl-marginNormal-81 MuiFormControl-fullWidth-83"
      >
        <label
          class="MuiFormLabel-root-91 MuiFormLabel-required-96 MuiInputLabel-root-84 MuiInputLabel-formControl-85 MuiInputLabel-animated-88"
          data-shrink="false"
          for="password"
        >
          Password
          <span
            class="MuiFormLabel-asterisk-97"
          >
             *
          </span>
        </label>
        <div
          class="MuiInputBase-root-111 MuiInput-root-98 MuiInput-underline-102 MuiInputBase-formControl-112 MuiInput-formControl-99"
        >
          <input
            aria-invalid="false"
            autocomplete="current-password"
            class="MuiInputBase-input-121 MuiInput-input-106 MuiInputBase-inputType-124 MuiInput-inputType-109"
            id="password"
            name="password"
            required=""
            type="password"
          />
        </div>
      </div>
      <button
        class="MuiButtonBase-root-154 MuiButton-root-128 MuiButton-contained-139 MuiButton-containedPrimary-140 MuiButton-raised-142 MuiButton-raisedPrimary-143 MuiButton-fullWidth-153 SignIn-submit-5"
        tabindex="0"
        type="submit"
      >
        <span
          class="MuiButton-label-129"
        >
          Sign in
        </span>
      </button>
    </form>
  </div>
</main>
`;

exports[`pure function returns the same output for the same input 2`] = `
<form
  class="SignIn-form-4"
>
  <div
    class="MuiFormControl-root-80 MuiFormControl-marginNormal-81 MuiFormControl-fullWidth-83"
  >
    <label
      class="MuiFormLabel-root-91 MuiFormLabel-required-96 MuiInputLabel-root-84 MuiInputLabel-formControl-85 MuiInputLabel-animated-88"
      data-shrink="false"
      for="email"
    >
      Email Address
      <span
        class="MuiFormLabel-asterisk-97"
      >
         *
      </span>
    </label>
    <div
      class="MuiInputBase-root-111 MuiInput-root-98 MuiInput-underline-102 MuiInputBase-formControl-112 MuiInput-formControl-99"
    >
      <input
        aria-invalid="false"
        autocomplete="email"
        autofocus=""
        class="MuiInputBase-input-121 MuiInput-input-106"
        id="email"
        name="email"
        required=""
        type="text"
      />
    </div>
  </div>
  <div
    class="MuiFormControl-root-80 MuiFormControl-marginNormal-81 MuiFormControl-fullWidth-83"
  >
    <label
      class="MuiFormLabel-root-91 MuiFormLabel-required-96 MuiInputLabel-root-84 MuiInputLabel-formControl-85 MuiInputLabel-animated-88"
      data-shrink="false"
      for="password"
    >
      Password
      <span
        class="MuiFormLabel-asterisk-97"
      >
         *
      </span>
    </label>
    <div
      class="MuiInputBase-root-111 MuiInput-root-98 MuiInput-underline-102 MuiInputBase-formControl-112 MuiInput-formControl-99"
    >
      <input
        aria-invalid="false"
        autocomplete="current-password"
        class="MuiInputBase-input-121 MuiInput-input-106 MuiInputBase-inputType-124 MuiInput-inputType-109"
        id="password"
        name="password"
        required=""
        type="password"
      />
    </div>
  </div>
  <button
    class="MuiButtonBase-root-154 MuiButton-root-128 MuiButton-contained-139 MuiButton-containedPrimary-140 MuiButton-raised-142 MuiButton-raisedPrimary-143 MuiButton-fullWidth-153 SignIn-submit-5"
    tabindex="0"
    type="submit"
  >
    <span
      class="MuiButton-label-129"
    >
      Sign in
    </span>
  </button>
</form>
`;

exports[`render Login-Component 1`] = `
<main
  class="SignIn-main-1"
>
  <div
    class="MuiPaper-root-6 MuiPaper-elevation2-10 MuiPaper-rounded-7 SignIn-paper-2"
  >
    <div
      class="MuiAvatar-root-33 MuiAvatar-colorDefault-34 SignIn-avatar-3"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root-36"
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <g
          fill="none"
        >
          <path
            d="M0 0h24v24H0V0z"
          />
          <path
            d="M0 0h24v24H0V0z"
            opacity=".87"
          />
        </g>
        <path
          d="M18 8h-1V6c0-2.76-2.24-5-5-5S7 3.24 7 6v2H6c-1.1 0-2 .9-2 2v10c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V10c0-1.1-.9-2-2-2zM9 6c0-1.66 1.34-3 3-3s3 1.34 3 3v2H9V6zm9 14H6V10h12v10zm-6-3c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2z"
        />
      </svg>
    </div>
    <h1
      class="MuiTypography-root-45 MuiTypography-h4-60"
    >
      Skill Matrix
    </h1>
    <form
      class="SignIn-form-4"
    >
      <div
        class="MuiFormControl-root-80 MuiFormControl-marginNormal-81 MuiFormControl-fullWidth-83"
      >
        <label
          class="MuiFormLabel-root-91 MuiFormLabel-required-96 MuiInputLabel-root-84 MuiInputLabel-formControl-85 MuiInputLabel-animated-88"
          data-shrink="false"
          for="email"
        >
          Email Address
          <span
            class="MuiFormLabel-asterisk-97"
          >
             *
          </span>
        </label>
        <div
          class="MuiInputBase-root-111 MuiInput-root-98 MuiInput-underline-102 MuiInputBase-formControl-112 MuiInput-formControl-99"
        >
          <input
            aria-invalid="false"
            autocomplete="email"
            autofocus=""
            class="MuiInputBase-input-121 MuiInput-input-106"
            id="email"
            name="email"
            required=""
            type="text"
          />
        </div>
      </div>
      <div
        class="MuiFormControl-root-80 MuiFormControl-marginNormal-81 MuiFormControl-fullWidth-83"
      >
        <label
          class="MuiFormLabel-root-91 MuiFormLabel-required-96 MuiInputLabel-root-84 MuiInputLabel-formControl-85 MuiInputLabel-animated-88"
          data-shrink="false"
          for="password"
        >
          Password
          <span
            class="MuiFormLabel-asterisk-97"
          >
             *
          </span>
        </label>
        <div
          class="MuiInputBase-root-111 MuiInput-root-98 MuiInput-underline-102 MuiInputBase-formControl-112 MuiInput-formControl-99"
        >
          <input
            aria-invalid="false"
            autocomplete="current-password"
            class="MuiInputBase-input-121 MuiInput-input-106 MuiInputBase-inputType-124 MuiInput-inputType-109"
            id="password"
            name="password"
            required=""
            type="password"
          />
        </div>
      </div>
      <button
        class="MuiButtonBase-root-154 MuiButton-root-128 MuiButton-contained-139 MuiButton-containedPrimary-140 MuiButton-raised-142 MuiButton-raisedPrimary-143 MuiButton-fullWidth-153 SignIn-submit-5"
        tabindex="0"
        type="submit"
      >
        <span
          class="MuiButton-label-129"
        >
          Sign in
        </span>
      </button>
    </form>
  </div>
</main>
`;
